--- a/wiki/City/Basic_Info.html
+++ b/wiki/City/Basic_Info.html
@@ -233,17 +233,17 @@
 				  <td>Right</td> <!-- This is a made-up value -->
 				<ul>
 				  <p><strong>Главы организаций</strong></p>
-				  <li>Bestellung: Адриан Велес, основатель организации.</li>
-				  <li>Esper Suppression and Prevention Emergency Response (EPSER): Командир Юрий Карпийский.</li>
-				  <li>Esper Art Collective (EAC): Изабелла Росси.</li>
-				  <li>Esper Sports Association (ESA): Самуэль "Сэмми" Оби.</li>
-				  <li>Quantum Nova: CEO Quantum Nova: Доктор Альберт Чанг</li>
-				  <li>Neumann Genetic Research Center: Доктор Эмма Фишер</li>
-				  <li>Nova Hofnuf University (NHU): Доктор Оливия Сантос.</li>
-				  <li>The Nova Project (TNP): Доктор Харуки Танака.</li>
-				  <li>Esper Integration and Support Effort (EIAS): Директор Елена Васкес.</li>
-				  <li>Quantum Physics Research Center (QPRC): Доктор Альберт Чанг.</li>
-				  <li>Mendes Botanical Research Center: Доктор София Мендес.</li>
+				  <li><strong>Bestellung</strong>: Адриан Велес, основатель организации.</li>
+				  <li><strong>Esper Suppression and Prevention Emergency Response (EPSER)</strong>:: Командир Юрий Карпийский.</li>
+				  <li><strong>Esper Art Collective (EAC)</strong>: Изабелла Росси.</li>
+				  <li><strong>Esper Sports Association (ESA)</strong>: Самуэль "Сэмми" Оби.</li>
+				  <li><strong>Quantum Nova: CEO Quantum Nova</strong>: Доктор Альберт Чанг</li>
+				  <li><strong>Neumann Genetic Research Center</strong>: Доктор Эмма Фишер</li>
+				  <li><strong>Nova Hofnuf University (NHU)</strong>: Доктор Оливия Сантос.</li>
+				  <li><strong>The Nova Project (TNP)</strong>: Доктор Харуки Танака.</li>
+				  <li><strong>Esper Integration and Support Effort (EIAS)</strong>: Директор Елена Васкес.</li>
+				  <li><strong>Quantum Physics Research Center (QPRC)</strong>: Доктор Альберт Чанг.</li>
+				  <li><strong>Mendes Botanical Research Center</strong>: Доктор София Мендес.</li>
 				</ul>
 				</tr>
 			  </table>
